--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,8 @@
         <module>eureka-client-ribbon</module>
         <module>eureka-consumer-feign</module>
         <module>config-server</module>
+        <module>eureka-consumer-ribbon-hystrix</module>
+        <module>hystrix-dashboard</module>
+        <module>turbine</module>
     </modules>
 </project>
