--- a/eureka-client/pom.xml
+++ b/eureka-client/pom.xml
@@ -34,6 +34,15 @@
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
 
+
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.2.2</version>
+			<classifier>jdk15</classifier>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
