--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,6 @@
         <module>hystrix-dashboard</module>
         <module>turbine</module>
         <module>api-gateway</module>
+        <module>rabbitmq-hello</module>
     </modules>
 </project>
